* tests/deplibs-ident.at: New file with XFAIL test to expose wrong multiple listing of a deplib on the command line. * Makefile.am, tests/testsuite.at: Updated. Reported by Brian Barrett <brbarret@open-mpi.org>.

--- a/Makefile.am
+++ b/Makefile.am
@@ -472,6 +472,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/libtoolize.at \
 		  tests/old-m4-iface.at \
 		  tests/standalone.at \
+		  tests/deplibs-ident.at \
 		  tests/stresstest.at \
 		  tests/link-order.at \
 		  tests/convenience.at \
