* tests/subproject.at: New tests for libltdl as a subproject with its own configuration. * tests/testsuite.at: Use it. * Makefile.am (TESTSUITE_AT): Depend on it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -474,6 +474,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/standalone.at \
 		  tests/deplibs-ident.at \
 		  tests/stresstest.at \
+		  tests/subproject.at \
 		  tests/link-order.at \
 		  tests/convenience.at \
 		  tests/early-libtool.at \
