* ltmain.in [darwin]: Don't check for "bundle" in file path. Reported by Christoph Egger <Christoph_Egger@gmx.de>.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2565,7 +2565,8 @@ EOF
 		  *-*-darwin* )
 		    # if the lib is a module then we can not link against
 		    # it, someone is ignoring the new warnings I added
-		    if /usr/bin/file -L $add 2> /dev/null | $EGREP "bundle" >/dev/null ; then
+		    if /usr/bin/file -L $add 2> /dev/null |
+                      $EGREP ": [^:]* bundle" >/dev/null ; then
 		      $echo "** Warning, lib $linklib is a module, not a shared library"
 		      if test -z "$old_library" ; then
 		        $echo
