--- a/Makefile.am
+++ b/Makefile.am
@@ -138,7 +138,7 @@ $(srcdir)/stamp-vcl: vcl-tmp clean-ltmain-sh ChangeLog
 vcl-tmp:
 	@set dummy `$(MKSTAMP) < $(srcdir)/ChangeLog`; shift; \
 	echo "$$1" > vcl.tmp; \
-	diff vcl.tmp $(srcdir)/stamp-vcl >/dev/null \
+	diff vcl.tmp $(srcdir)/stamp-vcl >/dev/null 2>/dev/null \
 	  || (echo "Updating stamp-vcl"; cp vcl.tmp $(srcdir)/stamp-vcl)
 	-@rm -f vcl.tmp
 
