* libltdl/m4/argz.m4, libltdl/m4/ltoptions.m4, libltdl/ltsugar.m4, libltdl/m4/ltversion.in: Add serial number tags, and bump serial number.

--- a/libltdl/m4/ltversion.in
+++ b/libltdl/m4/ltversion.in
@@ -9,7 +9,7 @@
 
 # @configure_input@
 
-# serial @MACRO_SERIAL@
+# serial @MACRO_SERIAL@ ltversion.m4
 # This file is part of GNU Libtool
 
 m4_define([LT_PACKAGE_VERSION], [@MACRO_VERSION@])
