* tests/nonrecursive.at: New tests for libltdl as a subdirectory, configured and compiled from the toplevel project. * tests/testsuite.at: Use it. (LT_AT_AUTOHEADER): New macro. * Makefile.am (TESTSUITE_AT): Depend on nonrecursive.at.

--- a/Makefile.am
+++ b/Makefile.am
@@ -362,6 +362,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/duplicate_members.at \
 		  tests/inherited_flags.at \
 		  tests/libtoolize.at \
+		  tests/nonrecursive.at \
 		  tests/old-m4-iface.at \
 		  tests/standalone.at \
 		  tests/deplibs-ident.at \
