* tests/recursive.at: New tests for libltdl as a subdirectory, configured and compiled from the toplevel project using a recursive make.. * tests/testsuite.at: Use it. * Makefile.am (TESTSUITE_AT): Depend on it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -364,6 +364,7 @@ TESTSUITE_AT	= tests/testsuite.at \
 		  tests/libtoolize.at \
 		  tests/nonrecursive.at \
 		  tests/old-m4-iface.at \
+		  tests/recursive.at \
 		  tests/standalone.at \
 		  tests/deplibs-ident.at \
 		  tests/stresstest.at \
