--- a/ltmain.in
+++ b/ltmain.in
@@ -1546,8 +1546,9 @@ EOF
       # -q* pass through compiler args for the IBM compiler
       # -m* pass through architecture-specific compiler args for GCC
       # -m*, -t[45]*, -txscale* pass through architecture-specific
-      # # compiler args for GCC
-      -64|-mips[0-9]|-r[0-9][0-9]*|-xarch=*|-xtarget=*|+DA*|+DD*|-q*|-m*| \
+      # compiler args for GCC
+      # -pg pass through profiling flag for GCC
+      -64|-mips[0-9]|-r[0-9][0-9]*|-xarch=*|-xtarget=*|+DA*|+DD*|-q*|-m*|-pg| \
       -t[45]*|-txscale*)
 
 	# Unknown arguments in both finalize_command and compile_command need
