* ltmain.in (link mode): Pass through -isysroot for cross architecture builds on darwin.

--- a/ltmain.in
+++ b/ltmain.in
@@ -1424,7 +1424,7 @@ EOF
 	continue
 	;;
 
-      -framework|-arch)
+      -framework|-arch|-isysroot)
         prev=darwin_framework
         compiler_flags="$compiler_flags $arg"
 	compile_command="$compile_command $arg"
