* libltdl/Makefile.inc (libltdl/argz.h): Create libltdl directory if it does not exist yet.  Take care that munging of the file will not mess up the build rule. Reported by Peter O'Gorman <peter@pogma.com>.

--- a/libltdl/Makefile.inc
+++ b/libltdl/Makefile.inc
@@ -138,6 +138,7 @@ EXTRA_DIST	+= libltdl/argz_.h
 # doesn't have one that works with the given compiler.
 all-local $(lib_OBJECTS): libltdl/$(ARGZ_H)
 libltdl/argz.h: libltdl/argz_.h
+	$(mkinstalldirs) . libltdl/
 	cp $(srcdir)/libltdl/argz_.h $@-t
 	mv $@-t $@
 MOSTLYCLEANFILES += libltdl/argz.h \
